--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,6 +14,11 @@
     <p class="profile-text__name">desmond</p>
     <p class="profile-text__surname">rambowski</p>
     <p class="profile-text__profession">Web Developer & Front-end Expert</p>
+</div>
+<div class="social-media-links">
+    <div class="social-media-links__link"><i class="fab fa-facebook-f"></i></div>
+	<div class="social-media-links__link"><i class="fab fa-dribbble"></i></div>
+	<div class="social-media-links__link"><i class="fab fa-twitter"></i></div>
 </div>
 <script src="script.js"></script>
 </body>
