--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="avatar">
+    <img src="img/avatar.jpg" class="avatar__photo">
+</div>
 <script src="script.js"></script>
 </body>
 </html>
