RES-12 icons for the project and fonts via cdn

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,9 +16,9 @@
     <p class="profile-text__profession">Web Developer & Front-end Expert</p>
 </div>
 <div class="social-media-links">
-    <div class="social-media-links__link"><i class="fab fa-facebook-f"></i></div>
-	<div class="social-media-links__link"><i class="fab fa-dribbble"></i></div>
-	<div class="social-media-links__link"><i class="fab fa-twitter"></i></div>
+    <a class="social-media-links__link" href="#"><i class=" social-media-links__icon fab fa-facebook-f"></i></a>
+	<a class="social-media-links__link" href="#"><i class="social-media-links__icon fab fa-dribbble"></i></a>
+	<a class="social-media-links__link" href="#"><i class="social-media-links__icon fab fa-twitter"></i></a>
 </div>
 <script src="script.js"></script>
 </body>
