RES-6 add profile text with styles

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,11 @@
 <div class="avatar">
     <img src="img/avatar.jpg" class="avatar__photo">
 </div>
+<div class="profile-text">
+    <p class="profile-text__name">desmond</p>
+    <p class="profile-text__surname">rambowski</p>
+    <p class="profile-text__profession">Web Developer & Front-end Expert</p>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
