--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,6 +14,7 @@
     <p class="profile-text__surname">rambowski</p>
     <p class="profile-text__profession">Web Developer & Front-end Expert</p>
 </div>
+<span>test merge</span>
 <script src="script.js"></script>
 </body>
 </html>
