res-17 css to scss

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -6,13 +6,15 @@
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 </head>
 <body>
-<div class="avatar">
-    <img src="assets/img/avatar.jpg" class="avatar__photo">
-</div>
-<div class="profile-text">
-    <p class="profile-text__name">desmond</p>
-    <p class="profile-text__surname">rambowski</p>
-    <p class="profile-text__profession">Web Developer & Front-end Expert</p>
+<div class="profile">
+    <div class="profile__avatar">
+        <img src="assets/img/avatar.jpg" class="avatar__photo">
+    </div>
+    <div class="profile__content">
+        <p class="profile__name">desmond</p>
+        <p class="profile__surname">rambowski</p>
+        <p class="profile__profession">Web Developer & Front-end Expert</p>
+    </div>
 </div>
 <div class="social-media-links">
     <a class="social-media-links__link" href="#"><i class=" social-media-links__icon fab fa-facebook-f"></i></a>
