RES-18 Add webpack-dev-server config, fix font loading

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div class="avatar">
-    <img src="../src/assets/img/avatar.jpg" class="avatar__photo">
+    <img src="assets/img/avatar.jpg" class="avatar__photo">
 </div>
 <div class="profile-text">
     <p class="profile-text__name">desmond</p>
@@ -35,6 +34,5 @@
         <div class="contacts__contact-info"><a href="#">hello@exapmle.com </a></div>
     </div>
 </div>
-<script src="main.js"></script>
 </body>
 </html>
