RES-17 css to scss, fix scss variable names, fix font path

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="profile">
     <div class="profile__avatar">
-        <img src="assets/img/avatar.jpg" class="avatar__photo">
+        <img src="assets/img/avatar.jpg" class="profile__photo">
     </div>
     <div class="profile__content">
         <p class="profile__name">desmond</p>
