RES-20 Adaptive grid in profile section

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -36,10 +36,10 @@
                     <div class="contacts__contact-info">534.456.886</div>
                 </div>
                 <div class="contacts__contact">Web
-                    <div class="contacts__contact-info"><a href="#">ruventhemes.com</a></div>
+                    <div class="contacts__contact-info">ruventhemes.com</div>
                 </div>
                 <div class="contacts__contact">Email
-                    <div class="contacts__contact-info"><a href="#">hello@exapmle.com </a></div>
+                    <div class="contacts__contact-info">hello@example.com</div>
                 </div>
             </div>
         </div>
