res-22 Fix styles for layout contacts section

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- PROFILE -->
-<div class="container">
+<div class="profile-container container">
     <div class="section">
         <div class="section__header">
             <div class="avatar">
@@ -29,16 +29,20 @@
                 </div>
             </div>
             <div class="contacts">
-                <div class="contacts__contact">Location
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">Location</div>
                     <div class="contacts__contact-info">Portland, OR</div>
                 </div>
-                <div class="contacts__contact">Phone
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">Phone</div>
                     <div class="contacts__contact-info">534.456.886</div>
                 </div>
-                <div class="contacts__contact">Web
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">Web</div>
                     <div class="contacts__contact-info">ruventhemes.com</div>
                 </div>
-                <div class="contacts__contact">Email
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">Email</div>
                     <div class="contacts__contact-info">hello@example.com</div>
                 </div>
             </div>
